Update Utilizando For em um dicionário.ipynb

--- a/Utilizando For em um dicionário.ipynb
+++ b/Utilizando For em um dicionário.ipynb
@@ -34,13 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 fim\n"
+     ]
+    }
+   ],
    "source": [
     "#Contando de 0 a 10 com o for:\n",
     "for contador in range(0,11):\n",
-    "    print(contador,end=\" \")\n",
+    "    print(contador, end=\" \")\n",
     "print('fim')"
    ]
   },
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,17 +74,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dicionário com notas de 3 fulanos:\n",
-    "notas = {'Esperto': 10, 'Mediocre': 5, 'Preguiça': 0, 'Colou': 9, 'Mentiroso': 11}\n"
+    "# Dicionário com notas de 5 fulanos:\n",
+    "notas = {'Esperto': 10, 'Mediocre': 5, 'Preguiça': 0, 'Colou': 0, 'Mentiroso': 11}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Esperto': 10, 'Mediocre': 5, 'Preguiça': 0, 'Colou': 0, 'Mentiroso': 11}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +113,32 @@
     "    'Esperto'  : 10,\n",
     "    'Mediocre' : 5,\n",
     "    'Preguiça' : 0,\n",
-    "    'Colou'    : 9, \n",
+    "    'Colou'    : 0, \n",
     "    'Mentiroso': 11\n",
     "    }\n",
     "# De um lado é chave, do outro é valor, não esqueça isto! \n",
     "#<-Chaves- | -Valores->\n",
     "#<-Keys--- | -Values-->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Esperto': 10, 'Mediocre': 5, 'Preguiça': 0, 'Colou': 0, 'Mentiroso': 11}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas"
    ]
   },
   {
@@ -102,27 +150,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "notas['Colou']"
+    "notas['Preguiça']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(notas['Colou'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "O aluno que colou tirou nota: 0\n",
+      "---------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(33*'-')\n",
     "print(f\"O aluno que colou tirou nota: {notas['Colou']}\")\n",
@@ -138,23 +215,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esperto\n",
+      "Mediocre\n",
+      "Preguiça\n",
+      "Colou\n",
+      "Mentiroso\n"
+     ]
+    }
+   ],
    "source": [
     "# Chamando as chaves:\n",
     "for chaves in notas:\n",
-    "    print(x)"
+    "    print(chaves)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esperto\n",
+      "Mediocre\n",
+      "Preguiça\n",
+      "Colou\n",
+      "Mentiroso\n"
+     ]
+    }
+   ],
    "source": [
     "# Chamando valores:\n",
-    "for valores in notas.values():\n",
+    "for valores in notas.keys():\n",
     "    print(valores)\n"
    ]
   },
