Update Utilizando For em um dicionário.ipynb

--- a/Utilizando For em um dicionário.ipynb
+++ b/Utilizando For em um dicionário.ipynb
@@ -256,8 +256,13 @@
    "source": [
     "# Chamando valores:\n",
     "for valores in notas.keys():\n",
-    "    print(valores)\n"
+    "    print(valores)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
